<resources>
	<string name="app_name">XCallRecordingSettings</string>
	<string name="app_description">LOS/CM Call Recording Settings</string>
	<string name="pref_title_call_recording">Call Recording</string>
	<string name="pref_record_enabled">record_enabled</string>
	<string name="pref_title_is_enable">Enable Call Recording</string>
	<string name="pref_summery_is_enable">Force Enable Call Recording</string>
	<string name="pref_title_force_audio_source">Force Audio Source</string>
	<string name="pref_summery_force_audio_source">Force Use Voice Call Audio When Recording</string>
	<string name="pref_title_record_incoming">Record Incoming Calls</string>
	<string name="pref_summery_record_incoming">Auto Start Record Incoming Calls</string>
	<string name="pref_title_record_outgoing">Record Outgoing Calls</string>
	<string name="pref_summery_record_outgoing">Auto Start Record Outgoing Calls</string>
	<string name="pref_title_record_delay">Record Delay (in milliseconds)</string>
	<string name="pref_summery_record_delay">Delay Between Phone Call and Recording Start</string>
	<string name="pref_title_aac_format">Use AAC Format</string>
	<string name="pref_summery_aac_format">Use AAC Audio Encoding and Output .m4a Files</string>
	<string name="pref_title_recording_file">Recording File</string>
	<string name="pref_title_module">Module</string>
	<string name="pref_title_module_scope">Module Scope</string>
	<string name="pref_summery_module_scope">You should enable this module for Phone app (com.android.dialer).</string>
	<string name="pref_title_selinux_warning">SELinux Warning!</string>
	<string name="pref_summery_selinux_warning">Due to the limitation by SELinux, all options on this screen may have <b>NO EFFECT</b>.\nOptions are saved in SharedPreferences which is private to this Xposed module. When the Dialer app reads these options, SELinux will deny such operation, which results in <b>NO EFFECT</b>.\nBut the recording can still work as these options at their default value.</string>
	<string name="pref_title_recording_folder">Recoding Folder</string>
	<string name="pref_title_prepend_contact_name">Prepend Contact Name</string>
	<string name="pref_summery_prepend_contact_name">Prepend Contact Name to Recording File Name</string>
	<string name="pref_title_separate_folder">Separate Folder</string>
	<string name="pref_summery_separate_folder">Place Recording Files into Separate Folder Based on Contact</string>
	<string name="pref_summery_separate_folder_disabled">Place Recording Files into Separate Folder Based on Contact\nThis option is not available on Android 10 / LOS 17 and later.</string>
	<string name="pref_title_skip_media_scan">Skip Media Scan</string>
	<string name="pref_summery_skip_media_scan">Prevent Recording Files be Added to Gallery</string>
	<string name="pref_title_about">About</string>
	<string name="pref_title_author">Author</string>
	<string name="pref_title_email">E-mail</string>
	<string name="pref_title_url">Source Code</string>
	<string name="text_url" translatable="false">https://github.com/iptux/XCallRecording-xposed</string>
	<string name="text_author" translatable="false">Tommy Alex</string>
	<string name="text_email" translatable="false">iptux7@gmail.com</string>
	<string name="text_mailto" translatable="false">mailto:iptux7@gmail.com</string>
	<string name="warning_storage_permission">Storage permission is not granted.</string>
</resources>
