<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pref_title_call_recording"
		>
		<CheckBoxPreference
			android:title="@string/pref_title_is_enable"
			android:summary="@string/pref_summery_is_enable"
			android:key="record_enabled"
			android:defaultValue="true"
			/>
		<CheckBoxPreference
			android:title="@string/pref_title_force_audio_source"
			android:summary="@string/pref_summery_force_audio_source"
			android:key="force_audio_source"
			android:dependency="record_enabled"
			android:defaultValue="false"
			/>
		<CheckBoxPreference
			android:title="@string/pref_title_record_incoming"
			android:summary="@string/pref_summery_record_incoming"
			android:key="record_incoming"
			android:dependency="record_enabled"
			android:defaultValue="true"
			/>
		<CheckBoxPreference
			android:title="@string/pref_title_record_outgoing"
			android:summary="@string/pref_summery_record_outgoing"
			android:key="record_outgoing"
			android:dependency="record_enabled"
			android:defaultValue="true"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_title_about"
		>
		<Preference
			android:title="@string/app_name"
			android:summary="@string/app_version"
			/>
		<Preference
			android:title="@string/pref_title_url"
			android:summary="@string/text_url"
			>
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/text_url"
				/>
		</Preference>
		<Preference
			android:title="@string/pref_title_author"
			android:summary="@string/text_author"
			/>
		<Preference
			android:title="@string/pref_title_email"
			android:summary="@string/text_email"
			>
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/text_mailto"
				/>
		</Preference>
	</PreferenceCategory>
</PreferenceScreen>
